test/conformance/chainsaw/mutating-policies/context/image-data/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
spec:
  containers:
    - name: nginx
      image: mirror.gcr.io/library/nginx:1.21
