test/conformance/chainsaw/mutating-policies/context/image-data/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: MutatingPolicy
metadata:
  name: mpol-image-data
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: [v1]
        operations: [CREATE]
        resources: [pods]
  variables:
    - name: architectures
      expression: >-
        image.GetMetadata(object.spec.containers[0].image).config.architecture
  mutations:
    - patchType: ApplyConfiguration
      applyConfiguration:
        expression: >-
          Object{
            metadata: Object.metadata{
              labels: Object.metadata.labels{
                architecture: variables.architectures
              }
            }
          }
